--- a/style.css
+++ b/style.css
@@ -6,12 +6,9 @@
 html, body {
   background: black;
   color: white;
-  text-align: center;
-  font-size: 85vh;
 }
 
-body {
-  position: absolute;
-  top: 0;
-  left: 0;
+img {
+  width: 100%;
+  height: 100%;
 }
