--- a/style.css
+++ b/style.css
@@ -1,14 +1,39 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-html, body {
-  background: black;
-  color: white;
+body {
+  margin: 0 1rem;
+  padding: 1rem 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-img {
+body a {
+  text-decoration: none;
+  color: inherit;
+}
+
+body a:hover, body a:active {
+  color: #777;
+}
+
+body h1 {
+  font-size: 5rem;
+  margin-bottom: 5rem;
+}
+
+body p {
+  margin-bottom: 3rem;
+}
+
+body img {
   width: 100%;
   height: 100%;
+  margin-bottom: 1rem;
+}
+
+body img:hover {
+  opacity: 0.8;
 }
