--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
   margin: 0 1rem;
   padding: 1rem 0;
   font-family: Arial, Helvetica, sans-serif;
+  background: black;
+  color: white;
 }
 
 body a {
@@ -16,7 +18,7 @@ body a {
 }
 
 body a:hover, body a:active {
-  color: #777;
+  color: gray;
 }
 
 body h1 {
@@ -35,5 +37,5 @@ body img {
 }
 
 body img:hover {
-  opacity: 0.8;
+  opacity: 0.5;
 }
