--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body {
   margin: 0 1rem;
   padding: 1rem 0;
   font-family: Arial, Helvetica, sans-serif;
-  background: black;
-  color: white;
+  background: #0a0a0a;
+  color: #fafafa;
 }
 
 body a {
@@ -18,7 +18,7 @@ body a {
 }
 
 body a:hover, body a:active {
-  color: gray;
+  color: #808080;
 }
 
 body h1 {
