--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -32,21 +33,63 @@ body p {
 }
 
 body section#gallery {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: auto;
   grid-template-columns: auto;
   grid-gap: 1rem;
   margin-bottom: 1rem;
 }
 
+body section#gallery a {
+  position: relative;
+}
+
+body section#gallery a:hover, body section#gallery a:active {
+  color: unset;
+}
+
+body section#gallery div.hovertext {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100%;
+  background: rgba(234, 96, 96, 0.75);
+  opacity: 0;
+  -webkit-transition: all 150ms linear;
+  -o-transition: all 150ms linear;
+  transition: all 150ms linear;
+}
+
+body section#gallery div.hovertext:hover, body section#gallery div.hovertext:active {
+  opacity: 1;
+}
+
+body section#gallery div.hovertext p {
+  margin: 0;
+  font-size: 2rem;
+  font-style: italic;
+}
+
 body section#gallery img {
+  display: -ms-grid;
   display: grid;
   width: 100%;
   height: 100%;
 }
 
-body section#gallery img:hover, body section#gallery img:active {
-  opacity: 0.4;
-}
 
 
 
@@ -54,6 +97,7 @@ body section#gallery img:hover, body section#gallery img:active {
 @media (min-width: 600px) {
   
   body section#gallery {
+    -ms-grid-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
   }
 
@@ -62,6 +106,7 @@ body section#gallery img:hover, body section#gallery img:active {
 @media (min-width: 1200px) {
   
   body section#gallery {
+    -ms-grid-columns: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
   }
 
@@ -70,6 +115,7 @@ body section#gallery img:hover, body section#gallery img:active {
 @media (min-width: 1800px) {
   
   body section#gallery {
+    -ms-grid-columns: 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 
