--- a/style.css
+++ b/style.css
@@ -8,12 +8,40 @@
 body {
   margin: 0 1rem;
   padding: 1rem 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   background: #0a0a0a;
   color: #fafafa;
   text-transform: lowercase;
   text-align: center;
 }
+
+/* section#cover {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9;
+  background: #0a0a0a;
+}
+
+section#preload {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 8;
+  background: #0a0a0a;
+  color: #fafafa;
+}
+
+section#load {
+  display: none;
+} */
 
 body a {
   text-decoration: none;
@@ -25,13 +53,13 @@ body a:hover, body a:active {
 }
 
 body h1 {
-  font-size: 5rem;
-  margin-bottom: 5rem;
+  font-size: 4rem;
+  margin-bottom: 4rem;
 }
 
 body h2 {
-  font-size: 3rem;
-  margin-bottom: 3rem;
+  font-size: 2rem;
+  margin-bottom: 2rem;
 }
 
 body img#dil {
