--- a/style.css
+++ b/style.css
@@ -96,14 +96,6 @@ body section#gallery div.hovertext {
   width: 100%;
   height: 100%;
   background: rgba(234, 96, 96, 0.75);
-  opacity: 0;
-  -webkit-transition: all 150ms linear;
-  -o-transition: all 150ms linear;
-  transition: all 150ms linear;
-}
-
-body section#gallery div.hovertext:hover, body section#gallery div.hovertext:active {
-  opacity: 1;
 }
 
 body section#gallery div.hovertext p {
@@ -116,7 +108,7 @@ body section#gallery img {
   display: -ms-grid;
   display: grid;
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 
@@ -125,7 +117,7 @@ body section#gallery img {
 
 @media (min-width: 600px) {
   
-  body section#gallery.main {
+  body section#gallery.music {
     -ms-grid-columns: auto auto;
     grid-template-columns: auto auto;
   }
@@ -133,8 +125,24 @@ body section#gallery img {
 }
 
 @media (min-width: 1200px) {
+
+  body section#gallery div.hovertext {
+    opacity: 0;
+    -webkit-transition: all 150ms linear;
+    -o-transition: all 150ms linear;
+    transition: all 150ms linear;
+  }
+
+  body section#gallery div.hovertext:hover, body section#gallery div.hovertext:active {
+    opacity: 1;
+  }
   
   body section#gallery.main {
+    -ms-grid-columns: auto auto auto;
+    grid-template-columns: auto auto auto;
+  }
+
+  body section#gallery.music {
     -ms-grid-columns: auto auto auto;
     grid-template-columns: auto auto auto;
   }
